# mcp-sonos

./: .env.example  .gitignore  CLAUDE.md  README.md  playlist_smoke.py  pyproject.toml  queue_smoke.py  reap_smoke.py  smoke_test.py
.flightops/: ARTIFACTS.md  FLIGHT_OPERATIONS.md
.flightops/agent-crews/: flight-debrief.md  flight-design.md  leg-execution.md  mission-debrief.md  mission-design.md  routine-maintenance.md
maintenance/: 2026-05-18.md  2026-06-02.md
mcp_sonos/: __init__.py  _extract.py  _retry.py  _urls.py  audio_host.py  controller.py  playlists.py  server.py  speakers.py  tts.py
missions/01-baseline-maintenance/: mission-debrief.md  mission.md
missions/01-baseline-maintenance/flights/01-correctness-and-capability/: flight-debrief.md  flight-log.md  flight.md
missions/01-baseline-maintenance/flights/01-correctness-and-capability/legs/: 01-fix-playlist-takeover-attribute.md  02-constrain-play-file-to-media-root.md  03-validate-audio-port-range.md  04-route-say-through-group-members-helper.md  05-url-encode-audio-host-filenames.md  06-restrict-play-url-schemes.md
missions/01-baseline-maintenance/flights/02-documentation-cleanup/: flight-debrief.md  flight-log.md  flight.md
missions/01-baseline-maintenance/flights/02-documentation-cleanup/legs/: 01-fix-doc-traps.md  02-remove-dead-lock-and-import.md  03-anonymize-lan-ips.md  04-fix-readme-tool-count.md  05-codify-claude-md-patterns.md  06-resolve-httpurl-alias.md
missions/01-baseline-maintenance/flights/03-supply-chain-hardening/: flight-debrief.md  flight-log.md  flight.md
missions/01-baseline-maintenance/flights/04-test-scaffolding/: flight-log.md  flight.md
missions/02-resilient-queue-playback/: mission-debrief.md  mission.md
missions/02-resilient-queue-playback/flights/01-native-queue-playback/: flight-debrief.md  flight-log.md  flight.md
missions/02-resilient-queue-playback/flights/02-reap-resilient-control/: flight-debrief.md  flight-log.md  flight.md
missions/02-resilient-queue-playback/flights/03-docs-and-smoke/: flight-debrief.md  flight-log.md  flight.md
missions/03-maintenance/: mission.md
missions/03-maintenance/flights/01-consolidation-and-hygiene/: flight-log.md  flight.md
poc/: audio_server.py  debug_play.py  discover.py  greet_each.py  speakers.py  sync_announce.py  tts.py
tests/: _builders.py  _fakes.py  conftest.py  test_extract.py  test_playlists_takeover.py  test_queue_path.py  test_queue_resume.py  test_reboot.py  test_say_coordinator.py  test_tts_verify.py  test_urls.py  test_version.py
(+33 files in other folders)
