[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mcp-sonos"
dynamic = ["version"]
description = "MCP server for local Sonos control over WiFi (UPnP via SoCo) with offline TTS announcements via Piper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "msieurthenardier" },
]
keywords = ["mcp", "sonos", "soco", "piper", "tts", "smart-home"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "fastmcp>=3.0,<4",
    "soco>=0.30",
    "piper-tts>=1.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pip-audit",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mcp-sonos = "mcp_sonos.server:main"

[project.urls]
Homepage = "https://github.com/msieurthenardier/mcp-sonos"
Issues = "https://github.com/msieurthenardier/mcp-sonos/issues"

[tool.hatch.version]
path = "mcp_sonos/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mcp_sonos"]
